# chem-review-claw

./: .gitignore  GLOBAL_DEV_SPEC.md  README.md  __init__.py  benchmark_rl.py  benchmark_test.py  chemqa-review-deadlock-fix-plan-2026-04-10.md  conformabench_judge.py  pyproject.toml  runtime_paths.py
benchmarking/: __init__.py  config_renderer.py  contracts.py  datasets.py  evaluation.py  evaluators.py  experiments.py  prompts.py  provisioning.py  reporting.py  runtime_config.py  status.py
benchmarking/runners/: __init__.py  chemqa.py  single_llm.py
docs/: chemqa-native-workflow-design.md
docs/superpowers/plans/: 2026-04-23-benchmark-refactor.md  2026-04-26-chemqa-rejected-completed-answer-sanitization.md  2026-04-26-chemqa-unattended-benchmark-natural-completion-repair.md  2026-04-26-conformabench-top3-real-benchmark-validation.md  2026-04-27-chemqa-evaluable-answer-recovery-implementation.md  2026-04-29-chemqa-phase-scoped-agent-driver.md
docs/superpowers/specs/: 2026-04-27-chemqa-evaluable-answer-recovery-design.md  2026-04-28-chemqa-two-layer-artifact-protocol-design.md
grobid-docker/: README.md  compose.yaml
mineru-api-docker/: Dockerfile  README.md  compose.yaml  requirements.txt
scripts/: docker_services.sh
skills/benchmark-cleanroom/: SKILL.md
skills/benchmark-cleanroom/references/: runtime-surfaces.md
skills/benchmark-cleanroom/scripts/: cleanup_benchmark_run.py  runtime_lease.py
skills/chem-calculator/: SKILL.md  routing-rules.md
skills/chem-calculator/references/: contracts.md
skills/chem-calculator/scripts/: acid_base_solver.py  answer_check.py  chemcalc_core.py  concentration.py  electrochemistry.py  gas_law.py  ksp_solver.py  molar_mass.py  redox_balance.py  stoichiometry.py  thermo_solver.py  unit_convert.py
skills/chem-calculator/tests/: test_chem_calculator_cli.py
skills/chemqa-review/: SKILL.md
skills/chemqa-review/presets/: chemqa-review@1.json
skills/chemqa-review/references/: contracts.md
skills/chemqa-review/runtime/: __init__.py  state_models.py  workflow.py
skills/chemqa-review/scripts/: bundle_common.py  (+13 more)
skills/debateclaw-v1/: README.md  SKILL.md
skills/opsin/: SKILL.md  routing-rules.md
skills/paper-access/: SKILL.md
skills/paper-parse/: SKILL.md
skills/paper-rerank/: SKILL.md
skills/paper-retrieval/: SKILL.md
skills/pubchem/: SKILL.md  routing-rules.md
skills/rdkit/: SKILL.md  routing-rules.md
tests/: test_benchmark_cleanroom.py  test_benchmark_config_runtime.py  test_benchmark_contracts.py  test_benchmark_datasets.py  test_benchmark_evaluators.py  test_benchmark_prompts.py  test_benchmark_rl.py  test_benchmark_status.py  test_benchmark_test.py  test_chemqa_epoch_flow.py  test_workspace_layout.py
tmp/: 2026-04-09-chemqa-review-transport-fix.md
(+160 files in other folders)
